--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-*
